--- a/blocks/course-outline/style.scss
+++ b/blocks/course-outline/style.scss
@@ -1,18 +1,3 @@
-.lithe-course-modules-container {
-  position: relative;
-
-  &::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    pointer-events: none;
-    z-index: 1;
-  }
-}
-
 .lithe-course-modules {
   margin: 2rem 0;
 }
@@ -28,7 +13,7 @@
 
 .module-header {
   padding: 1rem;
-  background: #e7e7e7;
+  background: #ffffff;
   color: #000000;
   cursor: pointer;
   display: flex;
@@ -81,24 +66,13 @@
     border-bottom: none;
   }
 
-  a,
   .lesson-title {
     text-decoration: none;
-    flex-grow: 1;
     transition: color 0.2s;
     display: block;
 
     &:hover {
       filter: brightness(0.9);
-    }
-  }
-
-  &.current-lesson {
-    background-color: #f0f7fc;
-
-    a,
-    .lesson-title {
-      font-weight: 600;
     }
   }
 }
@@ -110,46 +84,4 @@
   transition:
     background-color 0.2s,
     color 0.2s;
-}
-
-.lesson-completion {
-  display: flex;
-  align-items: center;
-  margin-right: 0.8rem;
-  cursor: pointer;
-
-  &.loading .completion-status {
-    opacity: 0.5;
-    pointer-events: none;
-  }
-}
-
-.lesson-completion-checkbox {
-  display: none;
-
-  &:checked + .completion-status {
-    background-color: #2271b1;
-
-    &::after {
-      content: "";
-      position: absolute;
-      left: 5px;
-      top: 2px;
-      width: 4px;
-      height: 8px;
-      border: solid white;
-      border-width: 0 2px 2px 0;
-      transform: rotate(45deg);
-    }
-  }
-}
-
-.completion-status {
-  width: 18px;
-  height: 18px;
-  border: 2px solid #2271b1;
-  border-radius: 50%;
-  display: inline-block;
-  position: relative;
-  transition: all 0.2s;
 }
