--- a/blocks/lesson-sidebar/style.scss
+++ b/blocks/lesson-sidebar/style.scss
@@ -1,18 +1,3 @@
-.lithe-course-modules-container {
-  position: relative;
-
-  &::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    pointer-events: none;
-    z-index: 1;
-  }
-}
-
 .lithe-course-modules {
   margin: 2rem 0;
 }
@@ -28,7 +13,7 @@
 
 .module-header {
   padding: 1rem;
-  background: #e7e7e7;
+  background: #ffffff;
   color: #000000;
   cursor: pointer;
   display: flex;
@@ -130,8 +115,8 @@
     &::after {
       content: "";
       position: absolute;
-      left: 5px;
-      top: 2px;
+      left: 6px;
+      top: 3px;
       width: 4px;
       height: 8px;
       border: solid white;
