final fix for v1.0

--- a/blocks/lesson-sidebar/style.scss
+++ b/blocks/lesson-sidebar/style.scss
@@ -6,7 +6,7 @@
 // Main Container
 // =============================================================================
 
-.lithe-course-modules {
+.lithecourse-modules {
   margin: 2rem 0;
 }
 
