--- a/blocks/setting-panel-course/style.scss
+++ b/blocks/setting-panel-course/style.scss
@@ -1,6 +1,6 @@
 // item input text style
 
-.lithe-course-input-text {
+.lithecourse-input-text {
   margin-bottom: 0 !important;
 
   > div {
@@ -9,7 +9,7 @@
   }
 }
 
-.lithe-course-module-title-input {
+.lithecourse-module-title-input {
   > div {
     padding: 0px !important;
     margin: 0px !important;
